<resources>
    <string name="app_name">ShopBucket</string>
    <string name="enter">Войти</string>
    <string name="logo">logo</string>
    <string name="input_e_mail">Введите Ваш E-mail</string>
    <string name="input_password">Введите Ваш пароль</string>
    <string name="forgot_password">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="enter_to_account">Вход в аккаунт</string>
    <string name="register_now">Зарегистрироваться</string>
    <string name="already_have_an_account">Есть аккаунт ?</string>
    <string name="input_nickname">Введите имя пользователя</string>
    <string name="invalid_email_and_password">Неверная почта и пароль</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="invalid_email">Неверная почта</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="nickname_already_exist">Такое имя пользователя уже существует</string>
    <string name="nickname_empty">Введите имя пользователя</string>
    <string name="count">Количество</string>
    <string name="price">Стоимость</string>
    <string name="item_title">Название товара</string>
    <string name="add">Добавить</string>
    <string name="title">Название</string>
    <string name="save">Сохранить</string>
    <string name="add_puchase_name_hint">Имя похода за покупками</string>
    <string name="delete_complete">Элемент успешно удалён</string>
    <string name="error">Произошла ошибка</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="change_complete">Изменения сохранены</string>
</resources>