<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:background="@drawable/ic_harvest" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/input_background"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:elevation="4dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/registration_tv"
                style="@style/Text.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="65dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailEdt"
                style="@style/Text.Input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="50"
                android:background="@drawable/input_background"
                android:drawablePadding="6dp"
                android:hint="@string/input_e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toTopOf="@id/passwordEdt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_tv" />

            <EditText
                android:id="@+id/passwordEdt"
                style="@style/Text.Input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="75dp"
                android:background="@drawable/input_background"
                android:drawablePadding="6dp"
                android:hint="@string/input_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEdt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/registrationBtn"
        style="@style/Text.Large"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_btn"
        android:elevation="4dp"
        android:letterSpacing="0"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/register_now"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_background" />

    <View
        android:id="@+id/separator"
        android:layout_width="0.5dp"
        android:layout_height="15dp"
        android:layout_marginTop="18dp"
        android:background="@color/smallTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationBtn" />

    <TextView
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-light"
        android:text="@string/already_have_an_account"
        android:textAlignment="textEnd"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/loginBtn"
        app:layout_constraintEnd_toStartOf="@id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationBtn" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@android:color/transparent"
        android:text="@string/enter"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/registrationBtn"
        app:layout_constraintStart_toEndOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@id/registrationBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>